--- a/YBS/index-processing.html
+++ b/YBS/index-processing.html
@@ -669,7 +669,7 @@
                                 <li><a href="service" class="hover-style-link">Services</a></li>
                             </ul>
                         </div>
-                        <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">F
+                        <div class="col-lg-2 col-md-4 col-sm-6 footer-widget">
                             <h6 class="footer-widget__title mb-20">Support</h6>
                             <ul class="footer-widget__list">
                              
